--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "express": "^4.13.4",
+    "colors": "^1.1.2",
+    "serve-favicon":"^2.3.0"
+  },
   "author": "Jefferson Wu <makerjeffwu@gmail.com> (www.jeffersonwu.com)",
   "license": "ISC"
 }
